--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/tipos_de_prestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/tipos_de_prestamos.tmpl
@@ -161,6 +161,8 @@ function guardarNuevoTipoPrestamo(){
 
     objAH.tipoAccion= "AGREGAR_TIPO_PRESTAMO";
     objAH.sendToServer();
+
+    return false;
 }
 
 function updateGuardarNuevoTipoPrestamo(responseText){
