--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/tipos_de_prestamos_lista.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/tipos_de_prestamos_lista.tmpl
@@ -58,7 +58,7 @@
                                       print C4::AR::Filtros::action_button(
                                                                       button       => "btn btn-primary click",
                                                                       action       => 'modificarTipoPrestamo("[% tipo_prestamo.getId_tipo_prestamo %]")',
-                                                                      icon         => "icon-white icon-edit",
+                                                                      icon         => "icon-white icon-pencil",
                                                                       title        => "",
                                       ) ;
                                 [% END %]
