--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -12,7 +12,12 @@
             <h3>[% "Nuevo Estante" | i18n %]</h3>
       </div>
       <div class="modal-body">
-            <input type="text" id="input_nuevo_estante">
+          <div class="control-group">
+            <label for="input_nuevo_estante"> [% 'T&iacute;tulo del Estante' | i18n %] </label>
+            <div class="control">
+              <input type="text" id="input_nuevo_estante">
+            </div>
+          </div>
               <script type="text/javascript">
                           $(document).ready(function() {
                                       $('#input_nuevo_estante').keypress(function(e){if(e.which==13){if(this.value!=''){agregarEstante();}}});
@@ -42,8 +47,14 @@
       <div class="modal-header">
             <h3>[% "Nuevo Subestante" | i18n %]</h3>
       </div>
-      <div class="modal-body">
+        <div class="modal-body">
+          <div class="control-group">
+            <label for="input_nuevo_sub_estante"> [% 'T&iacute;tulo del Subestante' | i18n %] </label>
+            <div class="control">
               <input type="text" id="input_nuevo_sub_estante">
+            </div>
+          </div>        
+              
               <input type="hidden" id="estante_nuevo_sub_estante">
               <input type="hidden" id="padre_nuevo_sub_estante">
               <script type="text/javascript">
