--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/settings.tmpl
@@ -29,12 +29,7 @@
 	               <input type="hidden" name="token" value="[% token %]" />
 		       </div>
 			     <div class="form-actions">
-			           [% PERL %]
-			                               print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar' | i18n %]",
-			                                                                   boton   => "btn btn-primary",
-			                                                                   onClick => "function(){$('#user-settings').submit();}",
-			                                       ) ;
-			           [% END %]
+						<button type="submit" class="btn btn-large btn-primary" type="button"><i class="icon-white icon-ok"></i> [% 'Guardar' | i18n %]</button>
 			    </div>
         </fieldset>
 </form>
