--- a/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
@@ -16,7 +16,8 @@
                                                 {id => 'unindexed', text => "[% 'Registros no indexados' | i18n %]"},
                                                 {id => 'colecciones', text => "[% 'Colecciones' | i18n %]"},
                                                 {id => 'disponibilidad', text => "[% 'Disponibilidad de Ejemplares' | i18n %]"},
-                                                {id => 'estantes', text => "[% 'Estantes Virtuales' | i18n %]"}
+                                                {id => 'estantes', text => "[% 'Estantes Virtuales' | i18n %]"},
+                                                {id => 'busquedas', text => "[% 'Búsquedas' | i18n %]"}
                                               ],
                                  content_id=> 'reportes_catalogo',
                                  active_id => 'labels',
@@ -39,11 +40,6 @@
         <div class="tab-pane fade " id="estantes">
             [% INCLUDE 'partials/reportes/_reporte_estantes_virtuales.inc' %]
         </div>
-
-
-
-
-
         <div class="tab-pane fade " id="busquedas">
             [% INCLUDE 'partials/reportes/_reporte_busquedas.inc' %]
         </div>
