--- a/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
@@ -5,7 +5,7 @@
     print C4::AR::Filtros::tabbedPane( titulo   => "[% 'Reportes de Circulaci&oacute;n' | i18n %]",
                              subtitulo          => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos reportes' | i18n %]",
                              content            => [  {id => 'general', text => "[% 'General' | i18n %]" },
-                                                      {id => 'reservas', text=> "[% 'Reservas' | i18n %]" },
+                                                      #{id => 'reservas', text=> "[% 'Reservas' | i18n %]" },
                                                      
                                                   ] ,
                              active_id => 'general',
@@ -16,9 +16,9 @@
         <div class="tab-pane fade in active" id="general">
             [% INCLUDE 'partials/reportes/_reporte_circulacion_general.inc' %]
         </div>
-        <div class="tab-pane fade " id="reservas">
-            [% INCLUDE 'partials/reportes/_reporte_circulacion.inc' %]
-        </div>
+        <!-- <div class="tab-pane fade " id="reservas">
+            INCLUDE 'partials/reportes/_reporte_circulacion.inc' 
+        </div>-->
     
       </div>
 </section>
