--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -69,13 +69,14 @@
             <div class="control-group error">
                   <label class="control-label" for="apellido">[% "Apellido" | i18n %]*</label>
                   <div class="controls">
-                        <input id="apellido" name="apellido" required  type="text" class="input focused" value="[% socio_modificar.persona.getApellido %]" autofocus>
+                        <input id="apellido" name="apellido" required  type="text" class="input focused" value="[% socio_modificar.persona.getApellido %]" autofocus >
                         
                         <script>
-                              if (!("autofocus" in document.createElement("input"))) {
-                                document.getElementById("apellido").focus();
+                              if (!Modernizr.input.autofocus) {
+                                // no autofocus support :(
+                                $('#apellido').focus();
                               }
-                        </script>  
+                          </script>  
                   </div>
             </div>
 
