--- a/intranet/htdocs/intranet-tmpl/admin/revisiones_pendientes_check.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/revisiones_pendientes_check.tmpl
@@ -1,6 +1,6 @@
 [% IF cantidad %]
    <div class="alert">
-      <a class="close" data-dismiss="alert">×</a>
+      <a class="close" data-dismiss="alert">x</a>
       <strong>[% 'Atenci&oacute;n' | i18n %]</strong> [% 'Hay revisiones de ediciones para moderar' | i18n %]&nbsp;
 
        [% PERL %]
