--- a/intranet/htdocs/intranet-tmpl/about/about.tmpl
+++ b/intranet/htdocs/intranet-tmpl/about/about.tmpl
@@ -29,7 +29,7 @@ function updateEdit(responseText){
 		    print C4::AR::Filtros::action_button(                 text    => "[% 'Editar informaci&oacute;n' | i18n %]",
 		                                                          button   => "btn btn-primary",
 		                                                          action => "edit()",
-		                                                          icon => "icon-white icon-edit",
+		                                                          icon => "icon-white icon-pencil",
 		                                                          title   => "[% 'Editar informaci&oacute;n' | i18n %]",
 		                                                          id      => "[% 'edit_about' %]",
 		                                                                ) ;
