--- a/intranet/htdocs/intranet-tmpl/admin/usuarios/adminLibreDeuda.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/usuarios/adminLibreDeuda.tmpl
@@ -16,6 +16,11 @@ function desmarcar(chk){
 	}
 }
 
+function submitForm(){
+    $('#adminLiDe').submit();
+    startOverlay();
+} 
+
 </script>
 [% IF message %]
 <div class="mensajes_informacion">
@@ -26,7 +31,7 @@ function desmarcar(chk){
 [% END %]
 
 
-<form name="adminLiDe" method="post" action="[% url_prefix %]/admin/usuarios/adminLibreDeuda.pl" class="form-horizontal">
+<form name="adminLiDe" id="adminLiDe" method="post" action="[% url_prefix %]/admin/usuarios/adminLibreDeuda.pl" class="form-horizontal">
 
     <section class="center-section-form">
         <fieldset>
@@ -40,47 +45,47 @@ function desmarcar(chk){
             
             <div class="control-group">
                 <div class="controls">
-                    <input type="checkbox" name="chk1" id="chk1" value="1" onclick="desmarcar(this)"> [% "reservas adjudicadas" | i18n %]
+                    <input type="checkbox" name="chk1" id="chk1" value="1" onclick="desmarcar(this)"> [% "Reservas adjudicadas" | i18n %]
                 </div>
             </div>
             
             <div class="control-group">
                 <div class="controls">
-                    <input type="checkbox" name="chk2" id="chk2" value="1" onclick="desmarcar(this)"> [% "reservas en espera" | i18n %]
+                    <input type="checkbox" name="chk2" id="chk2" value="1" onclick="desmarcar(this)"> [% "Reservas en espera" | i18n %]
                 </div>
             </div>
             
             <div class="control-group">
                 <div class="controls">
-                    <input type="checkbox" name="chk3" id="chk3" value="1" onclick="desmarcar(this)"> [% "prestamos vencidos" | i18n %]
+                    <input type="checkbox" name="chk3" id="chk3" value="1" onclick="desmarcar(this)"> [% "Prestamos vencidos" | i18n %]
                 </div>
             </div>
             
             <div class="control-group">
                 <div class="controls">
-                    <input type="checkbox" name="chk4" id="chk4" value="1" onclick="desmarcar(this)"> [% "prestamos en curso" | i18n %]
+                    <input type="checkbox" name="chk4" id="chk4" value="1" onclick="desmarcar(this)"> [% "Prestamos en curso" | i18n %]
                 </div>
             </div>
             
             <div class="control-group">
                 <div class="controls">
-                    <input type="checkbox" name="chk5" id="chk5" value="1" onclick="desmarcar(this)"> [% "sanciones" | i18n %]
+                    <input type="checkbox" name="chk5" id="chk5" value="1" onclick="desmarcar(this)"> [% "Sanciones" | i18n %]
                 </div>
             </div>
             
             <div class="control-group">
                 <div class="controls">
-                    <input type="checkbox" name="chk0" id="chk0" value="1" onclick="checkedAll(this)"> [% "todas" | i18n %]
+                    <input type="checkbox" name="chk0" id="chk0" value="1" onclick="checkedAll(this)"> [% "Todas" | i18n %]
                 </div>
             </div>
             
             <div class="form-actions">
                   
                 [% PERL %]
-                                  print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar' | i18n %]",
-                                                                      boton   => "boton_buscar",
-                                                                      onClick => "adminLiDe.submit();",
-                                                                      inline  => "1",  
+                                  print C4::AR::Filtros::action_button(   title    => " [% 'Guardar' | i18n %]",
+                                                                      button   => "btn btn-primary",
+                                                                      action => "submitForm();",
+                                                                      icon  => "icon-white icon-ok",  
                                           ) ;
                 [% END %]
                 
