--- a/dev-plugins/bootstrapless/variables.less
+++ b/dev-plugins/bootstrapless/variables.less
@@ -133,8 +133,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "/includes/bootstrap/img/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "/includes/bootstrap/img/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
