fixes opac print css

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -423,7 +423,7 @@
 		                                                                            {title => "Modificar", action=>'modificarNivel2("[% id2 %]")',icon=>"icon-edit"},
 		                                                                            {title => "Eliminar", action=>"borrarN2([% id2 %])", icon=>"icon-trash"},   
 		                                                                      [% IF tiene_indice %]
-                                                                                    {title => "Editar &iacute;ndice", action=>'editarIndice([% id2 %])', icon=>"icon-list"},
+                                                                                    {title => "Editar texto &iacute;ndice", action=>'editarIndice([% id2 %])', icon=>"icon-list"},
                                                                               [% ELSE %]
                                                                                     {title => "Agregar &iacute;ndice", action=>'agregarIndice([% id2 %])', icon=>"icon-list"},
                                                                               [% END %]
