--- a/dev-plugins/bootstrapless/intranet/general.less
+++ b/dev-plugins/bootstrapless/intranet/general.less
@@ -36,3 +36,10 @@
 .block{
     display: block;
 }
+
+#ellipsis {
+    height:1.3em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
