--- a/dev-plugins/bootstrapless/opac/general.less
+++ b/dev-plugins/bootstrapless/opac/general.less
@@ -24,3 +24,10 @@ legend {
 .10_top_margin{
     margin-top: 10px;
 }
+
+#ellipsis {
+    height:1.3em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
