Se arreglo t_loguearbusqueda

--- a/dev-plugins/bootstrapless/opac/general.less
+++ b/dev-plugins/bootstrapless/opac/general.less
@@ -31,3 +31,15 @@ legend {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.margin_top_3px{
+    margin-top: 3px;
+}
+
+.no_margin{
+    margin: 0 !important;
+}
+
+.darkGrey{
+    color: @grayDarker;
+}
