--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -88,23 +88,21 @@
 	    </div>
 	</div>
 </header>
-<div class="container span100 no-margin padding_nav" style="padding-left:0;">
-    <div id="marco_principal" class="container" style="padding-left:0;" >   
-  		<div id="marco_contenido_datos" class="contenido" style="padding:0;">
-	  		<!--  usado como referencia por el MessageHelper -->
-  			<div id="end_top" style="margin:0; padding:0;">
+<div class="container " style="padding-left:0;">
+    <div id="marco_principal" class="container" >   
 			    [% IF mensaje %]
 						<div class="alert [% mensaje_class %]">
 						        <strong>[% 'Info' | i18n %]</strong> [% mensaje %]
 						</div>
 			    [% END %]
+  		<div id="marco_contenido_datos" class="span5 offset2" style="padding:0;">
+	  		<!--  usado como referencia por el MessageHelper -->
 				<!-- <div id="content" class="login-form"> -->
-				 <fieldset class="textbox" id="section_login">
+				 <fieldset class="textbox">
 					<div class="page-header">
 					    <h1>MERAN <small>[% 'Ingresar a Intranet' | i18n %]</small></h1>
 					</div>	
 						<div class="form-horizontal" id="login-form">
-						    
 					            <div class="control-group">
 					                <label class="control-label" for="username">[% 'Usuario' | i18n %]</label>
 					                <div class="controls">
@@ -117,8 +115,8 @@
 					                  <input type="password" class="input" id="password_plain" name="password_plain">
 					                </div>
 					            </div>
-							<div class="form-actions">
-							    <button type="submit" class="btn btn-primary" onclick="enviar();">[% 'Iniciar sesi&oacute;n' | i18n %]</button>
+							<div class="">
+							    <button type="submit" class="btn btn-large btn-block btn-primary" onclick="enviar();">[% 'Iniciar sesi&oacute;n' | i18n %]</button>
 							</div>	
 						  </div> 
 						 <form action='[% url_prefix %]/mainpage.pl' method="post" name="datosAEnviar" id="datosAEnviar">
@@ -139,7 +137,6 @@
 					     </form>
 				<!-- content -->
 			</fieldset>
-			</div><!-- end top -->
 		</div><!--marco_contenido_datos -->
 	</div><!--marco_ppal -->
 </div> <!-- container_test -->
