--- a/opac/htdocs/opac-tmpl/temas/DIF/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DIF/includes/opac.css
@@ -967,6 +967,9 @@ legend{}
 .bigInput{height:32px !important;font-size:23px !important;}
 .10_top_margin{margin-top:10px;}
 #ellipsis{height:1.3em;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
+.margin_top_3px{margin-top:3px;}
+.no_margin{margin:0 !important;}
+.darkGrey{color:#222222;}
 .alert-success blockquote{border-left:5px solid #DFF0D8 !important;}
 .title{background-color:#FAFAFA;font-size:20px;margin-bottom:20px;margin-top:15px;min-height:20px;padding:4px;}
 body{padding-bottom:60px;}
